Property changes in Component.onCompleted should trigger Behaviors.

Task-number: QTBUG-22555
Change-Id: Ieffb8037d7289113ea4f629ba3b578a845d2cb28
Reviewed-by: Martin Jones <martin.jones@nokia.com>